--- a/blogpost.html
+++ b/blogpost.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-    <h1>aqui vamos hacer un blog</h1>
 
+    <div class="container">
+        <h1>aqui vamos hacer un blog</h1>
+    </div>
 
 </body>
 
