--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <div class="cabecera">
+        <span>Bienvenidos</span>
+    </div>
 
     <div class="container">
         <h1>aqui vamos hacer un blog</h1>
