se agregaron parrafos

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
 
     <div class="container">
         <h1>aqui vamos hacer un blog</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit libero, provident cum unde nemo delectus ut ipsum reiciendis aliquam maiores cumque, recusandae sunt iste vitae illo odio, atque magni quam.</p>
     </div>
 
 </body>
