--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="cabecera">
-        <span>Bienvenidos</span>
+        <span>Bienvenidos cabecera</span>
     </div>
 
     <div class="container">
